--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agendash",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "description": "Agenda Dashboard",
   "main": "app.js",
   "bin": "bin/agendash-standalone.js",
@@ -29,6 +29,7 @@
     "body-parser": "^1.15.0",
     "commander": "^2.9.0",
     "express": "^4.0.0",
-    "mongodb": "^2.0.0"
+    "mongodb": "^2.0.0",
+    "semver": "^5.3.0"
   }
 }
